force-app/main/default/objects/Account/fields/AccountLocation__c.field-meta.xml
<CustomField>
    <fullName>AccountLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>