force-app/main/default/objects/Account/fields/ARA_No__c.field-meta.xml
<CustomField>
    <fullName>ARA_No__c</fullName>
    <label>ARA No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>