force-app/main/default/objects/Account/fields/Associated_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Associated_Order_Number__c</fullName>
    <label>Associated Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>