force-app/main/default/objects/Account/fields/Bill_to_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer_Id__c</fullName>
    <label>Bill to Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>