force-app/main/default/objects/Account/fields/CSAT_Scores__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Scores__c</fullName>
    <label>CSAT Scores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>