force-app/main/default/objects/Account/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>