force-app/main/default/objects/Account/fields/Customer_Sub_segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sub_segment__c</fullName>
    <label>Customer Sub segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture and Farmers Welfare</fullName>
            </value>
            <value>
                <fullName>Airbnb</fullName>
            </value>
            <value>
                <fullName>Airways</fullName>
            </value>
            <value>
                <fullName>Ayurvedic Hospital</fullName>
            </value>
            <value>
                <fullName>AYUSH</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Financial Services Institutions</fullName>
            </value>
            <value>
                <fullName>Banquets</fullName>
            </value>
            <value>
                <fullName>Caterers</fullName>
            </value>
            <value>
                <fullName>Chain of Hotels</fullName>
            </value>
            <value>
                <fullName>Chain of Laundromat - FOFO/COCO</fullName>
            </value>
            <value>
                <fullName>Chain of Restaurants</fullName>
            </value>
            <value>
                <fullName>Chemicals and Fertilizers</fullName>
            </value>
            <value>
                <fullName>Civil Aviation</fullName>
            </value>
            <value>
                <fullName>Clubs</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Commerce and Industry</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Consultant - Architect/PMC Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant - Design Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant - Kitchen Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant - Laundry Consultant</fullName>
            </value>
            <value>
                <fullName>Consumer Affairs, Food and Public Distribution</fullName>
            </value>
            <value>
                <fullName>Contractors - Building contractors</fullName>
            </value>
            <value>
                <fullName>Contractors - Canteen contractors</fullName>
            </value>
            <value>
                <fullName>Contractors - Laundry contractors</fullName>
            </value>
            <value>
                <fullName>Contractors - MES contractors</fullName>
            </value>
            <value>
                <fullName>Convention Centers</fullName>
                <isActive>false</isActive>
                <label>Convention Centers</label>
            </value>
            <value>
                <fullName>Conventional centers</fullName>
                <label>Convention Centre</label>
            </value>
            <value>
                <fullName>Cooperation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>