force-app/main/default/objects/Account/fields/Expected_ROI_In_Number__c.field-meta.xml
<CustomField>
    <fullName>Expected_ROI_In_Number__c</fullName>
    <formula>SDO_Sales_Closed_Won_Value__c   -  Total_Expense_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected ROI In Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>