force-app/main/default/objects/Account/fields/Expected_ROI_In_Percent__c.field-meta.xml
<CustomField>
    <fullName>Expected_ROI_In_Percent__c</fullName>
    <formula>Total_Expense_Amount__c /  SDO_Sales_Closed_Won_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected ROI In Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>