force-app/main/default/objects/Account/fields/Export_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Export_Agency_Name__c</fullName>
    <label>Export Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>