force-app/main/default/objects/Account/fields/Inauguration_Date__c.field-meta.xml
<CustomField>
    <fullName>Inauguration_Date__c</fullName>
    <label>Inauguration Date</label>
    <type>Date</type>
</CustomField>