force-app/main/default/objects/Account/fields/Is_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Red_Flag__c</fullName>
    <label>Is Red Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>