force-app/main/default/objects/Account/fields/Name_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Customer__c</fullName>
    <label>Name of Customer</label>
    <type>TextArea</type>
</CustomField>