force-app/main/default/objects/Account/fields/Next_Notification__c.field-meta.xml
<CustomField>
    <fullName>Next_Notification__c</fullName>
    <label>Next Notification</label>
    <type>DateTime</type>
</CustomField>