force-app/main/default/objects/Account/fields/NPS_Scores__c.field-meta.xml
<CustomField>
    <fullName>NPS_Scores__c</fullName>
    <label>NPS Scores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>