force-app/main/default/objects/Account/fields/Other_Business__c.field-meta.xml
<CustomField>
    <fullName>Other_Business__c</fullName>
    <label>Other Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>