force-app/main/default/objects/Account/fields/Other_Locations_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Other_Locations_if_applicable__c</fullName>
    <label>Other Locations, if applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>