force-app/main/default/objects/Account/fields/Parent_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer_ID__c</fullName>
    <formula>IF( ISBLANK(Parent.Customer_Id__c) , Customer_Id__c,Parent.Customer_Id__c)</formula>
    <label>Parent Customer ID</label>
    <type>Text</type>
</CustomField>