force-app/main/default/objects/Account/fields/PreInstallationUpdateAllow__c.field-meta.xml
<CustomField>
    <fullName>PreInstallationUpdateAllow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PreInstallationUpdateAllow</label>
    <type>Checkbox</type>
</CustomField>