force-app/main/default/objects/Account/fields/Rate_Contracted__c.field-meta.xml
<CustomField>
    <fullName>Rate_Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Contracted</label>
    <type>Checkbox</type>
</CustomField>