force-app/main/default/objects/Account/fields/Reasons_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Visit__c</fullName>
    <label>Reasons for Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service issue</fullName>
            </value>
            <value>
                <fullName>Relationship building</fullName>
            </value>
            <value>
                <fullName>New opportunities</fullName>
            </value>
            <value>
                <fullName>Visit with Service</fullName>
            </value>
            <value>
                <fullName>Invitations</fullName>
            </value>
            <value>
                <fullName>Festival wishes &amp; Greetings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>