force-app/main/default/objects/Account/fields/ROI_In_Number__c.field-meta.xml
<CustomField>
    <fullName>ROI_In_Number__c</fullName>
    <formula>Total_Order_Amount__c - Total_Expense_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI In Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>