force-app/main/default/objects/Account/fields/ROI_In_Percent__c.field-meta.xml
<CustomField>
    <fullName>ROI_In_Percent__c</fullName>
    <formula>Total_Expense_Amount__c /Total_Order_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI In Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>