force-app/main/default/objects/Account/fields/Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Name__c</fullName>
    <label>Ship to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>