force-app/main/default/objects/Account/fields/Shipping_Address_Same_as_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Same_as_Billing_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shipping Address Same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>