force-app/main/default/objects/Account/fields/Sub_type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Sub_type_of_Account__c</fullName>
    <label>Sub type of Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Account - High Value Customers</fullName>
            </value>
            <value>
                <fullName>PAN India Presence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>