force-app/main/default/objects/Account/fields/Total_IDW_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_IDW_Opportunities__c</fullName>
    <label>Total IDW Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Product_category__c</field>
        <operation>equals</operation>
        <value>Industrial Dishwasher</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Qualification, Site Visit, load Calculation, Proposal/Price Quote, Negotiation/Review</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>