force-app/main/default/objects/Account/recordTypes/B2B_Customer.recordType-meta.xml
<RecordType>
    <fullName>B2B_Customer</fullName>
    <active>true</active>
    <label>B2B Customer</label>
</RecordType>