force-app/main/default/objects/Account/recordTypes/cgcloud__Customer.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>