force-app/main/default/objects/Account/recordTypes/Distributors.recordType-meta.xml
<RecordType>
    <fullName>Distributors</fullName>
    <active>true</active>
    <label>Distributors</label>
</RecordType>