force-app/main/default/objects/Account/recordTypes/GEM_Dealer.recordType-meta.xml
<RecordType>
    <fullName>GEM_Dealer</fullName>
    <active>true</active>
    <label>GEM Dealer</label>
</RecordType>