force-app/main/default/objects/Account/recordTypes/IFB_Points.recordType-meta.xml
<RecordType>
    <fullName>IFB_Points</fullName>
    <active>true</active>
    <label>IFB Points</label>
</RecordType>