force-app/main/default/objects/Account/recordTypes/Provisional_Account.recordType-meta.xml
<RecordType>
    <fullName>Provisional_Account</fullName>
    <active>true</active>
    <label>Provisional Account</label>
</RecordType>