force-app/main/default/objects/Account/recordTypes/Retailers.recordType-meta.xml
<RecordType>
    <fullName>Retailers</fullName>
    <active>true</active>
    <label>Retailers</label>
</RecordType>