force-app/main/default/objects/Account/validationRules/AccountSource_Should_Export.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountSource_Should_Export</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(AccountSource, &quot;Export&quot;)),
NOT(ValidationBypass__c),
NOT(CONTAINS(BillingCountry, &quot;India&quot;))
)</errorConditionFormula>
    <errorDisplayField>AccountSource</errorDisplayField>
    <errorMessage>Account Source Should be Export if Shipping Country is other than India.</errorMessage>
</ValidationRule>