force-app/main/default/objects/Account/validationRules/cgcloud__Avoid_Change_External_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Change_External_ID</fullName>
    <active>false</active>
    <description>You cannot modify the ExternalId once it has an existent value.</description>
    <errorConditionFormula>AND ( 
ISCHANGED(cgcloud__ExternalId__c), 
NOT(ISBLANK(PRIORVALUE(cgcloud__ExternalId__c))) 
)</errorConditionFormula>
    <errorDisplayField>cgcloud__ExternalId__c</errorDisplayField>
    <errorMessage>The ExternalId can&apos;t be edited after Customer creation.</errorMessage>
</ValidationRule>