force-app/main/default/objects/Account/validationRules/cgcloud__CGCloud_Prevent_Account_Template_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__CGCloud_Prevent_Account_Template_Change</fullName>
    <active>false</active>
    <description>The Account Template can&apos;t be edited after Customer creation.</description>
    <errorConditionFormula>!ISBLANK(PRIORVALUE(cgcloud__Account_Template__c)) &amp;&amp; ISCHANGED(cgcloud__Account_Template__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Account_Template__c</errorDisplayField>
    <errorMessage>The Account Template can&apos;t be edited after Customer creation.</errorMessage>
</ValidationRule>