force-app/main/default/objects/Account/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK( ParentId )),  Parent.cgcloud__Sales_Org__c &lt;&gt; TEXT(cgcloud__Account_Template__r.cgcloud__Sales_Org__c))</errorConditionFormula>
    <errorMessage>The Parent Customer and the Customer Template must have the same Sales Org.</errorMessage>
</ValidationRule>