force-app/main/default/objects/Account/validationRules/CIN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CIN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  CIN_Number__c )),
NOT(REGEX(CIN_Number__c , &quot;^[A-Z]{1}[0-9]{5}[A-Z]{2}[0-9]{4}[A-Z]{3}[0-9]{6}$&quot;)),
!$User.Bypass_Validation_Rules__c,
NOT(CONTAINS($Profile.Name, &apos;Admin&apos;))
)</errorConditionFormula>
    <errorDisplayField>CIN_Number__c</errorDisplayField>
    <errorMessage>Please Enter Correct CIN No</errorMessage>
</ValidationRule>