force-app/main/default/objects/Account/validationRules/GST_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(
								OR(
												$User.Bypass_Validation_Rules__c,
												CONTAINS($Profile.Name, &apos;Admin&apos;)
								)
				),
				NOT(ISBLANK(GST_Number__c )),
    NOT(REGEX(GST_Number__c , &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[0-9]{1}[A-Z0-9]{1}[A-Z0-9]{1}$&quot;)),
				GST_Number__c = &apos;33AAACI6561R1Z4&apos;
)</errorConditionFormula>
    <errorDisplayField>GST_Number__c</errorDisplayField>
    <errorMessage>Please Enter Correct GST No</errorMessage>
</ValidationRule>