force-app/main/default/objects/Account/validationRules/PAN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(
								OR(
												$User.Bypass_Validation_Rules__c,
												CONTAINS($Profile.Name, &apos;Admin&apos;)
								)
				),
				NOT(ISBLANK(PAN_Number__c)),
    NOT(REGEX(PAN_Number__c , &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;)),
				PAN_Number__c = &apos;AAACI6561R&apos;
)</errorConditionFormula>
    <errorDisplayField>PAN_Number__c</errorDisplayField>
    <errorMessage>Please Enter Correct PAN No</errorMessage>
</ValidationRule>