force-app/main/default/objects/Account/validationRules/Prevent_Account_Fields_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_Fields_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ValidationBypass__c),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    OR(
        ISCHANGED(Name) &amp;&amp; NOT(ISBLANK(Name)),
        ISCHANGED(OwnerId) &amp;&amp; NOT(ISBLANK(OwnerId)),
        ISCHANGED(Phone) &amp;&amp; NOT(ISBLANK(Phone)),
        ISCHANGED(ParentId) &amp;&amp; NOT(ISBLANK(ParentId))
    )
)</errorConditionFormula>
    <errorMessage>These fields cannot be changed once set: Account Name, Owner, Phone, Parent Account.</errorMessage>
</ValidationRule>