force-app/main/default/objects/Account/listViews/cgcloud__AllAccounts.listView-meta.xml
<ListView>
    <fullName>cgcloud__AllAccounts</fullName>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Type_of_Customer__c</columns>
    <columns>Type_of_Account__c</columns>
    <columns>Sector__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>